--- a/styles.css
+++ b/styles.css
@@ -363,9 +363,9 @@ hr {
 }
 
 .partners-list img {
-  filter: invert(100%) sepia(0%), saturate(0%), hue-rotate(311deg),
-    brightness(102%), contrast(105%);
-    /* margin-block: 10%; */
+  filter: 
+    invert(100%) sepia(0%) saturate(0%) hue-rotate(311deg)
+    brightness(102%) contrast(105%);
 }
 
 .partners-flex {
