--- a/about.css
+++ b/about.css
@@ -97,7 +97,7 @@ p {
   width: 30px;
   height: 5px;
   margin: 5px 0;
-  background-color: #d3d3d3;
+  background-color: #272a31;
 }
 
 .home a {
@@ -130,11 +130,11 @@ p {
 
 .links a:hover {
   color: #ec5242;
-  border-bottom: 1px solid #ec5242;
+  /* border-bottom: 1px solid #ec5242; */
   background-color: #f7f7f8;
-  font-size: 1.2rem;
-  padding-inline: 11%;
-  padding-block: 5%;
+  /* font-size: 1.2rem; */
+  /* padding-inline: 11%; */
+  /* padding-block: 5%; */
 }
 
 .home a:hover {
@@ -211,6 +211,14 @@ p {
   text-align: center;
 }
 
+.flex-content .plane {
+  align-self: center;
+  height: 70px;
+  margin: 0;
+  padding: 15px 30px;
+  border: 1px solid #d3d3d3;
+}
+
 hr {
   width: 10%;
   margin-inline: auto;
@@ -257,9 +265,49 @@ hr {
   cursor: pointer;
 }
 
+.partners-section {
+  background-color: #3f444f;
+}
+
+.partners-heading {
+  text-align: center;
+  color: #fff;
+  padding-top: 10%;
+}
+
+.partners-list img {
+  filter:
+    invert(100%) sepia(0%) saturate(0%) hue-rotate(311deg)
+    brightness(102%) contrast(105%);
+}
+
+.partners-flex {
+  width: 90%;
+  margin: auto;
+  margin-top: 10%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.partner-list {
+  width: 100%;
+}
+
+.partner-image {
+  width: 125px;
+  height: 40px;
+}
+
+
 footer {
   min-height: 5rem;
-  background-color: black;
+  background-color: #fff;
+}
+
+
+.footer-logo a {
+  color: #000;
 }
 
 .footer-flex {
@@ -274,7 +322,7 @@ footer {
 .copy-right {
   font-size: 1rem;
   margin: 25px;
-  color: #fff;
+  color: #000;
 }
 
 .plane {
@@ -332,7 +380,6 @@ footer {
 
   header {
     background-color: #fff;
-    height: 3rem;
   }
 
   .navbar {
@@ -355,7 +402,7 @@ footer {
 
   .logo-DT {
     cursor: pointer;
-    width: 40%;
+    width: auto;
   }
 
   .home a {
@@ -379,6 +426,7 @@ footer {
     letter-spacing: 2px;
     padding-inline: 0.2rem;
     padding-block: 0.2rem;
+    white-space: nowrap;
   }
 
   .footer-logo a {
@@ -414,12 +462,10 @@ footer {
     position: unset;
     background-color: #fff;
     width: 164%;
-    margin-right: 13%;
   }
 
   .items {
     margin-block: 0;
-    margin-right: 4rem;
   }
 
   .items li {
@@ -438,11 +484,8 @@ footer {
 
   .links a:hover {
     color: #ec5242;
-    border: 1px solid #ec5242;
     background-color: #f7f7f8;
-    font-size: 1.15rem;
-    padding-inline: 15%;
-    padding-block: 8%;
+    transition: 0.6s;
   }
 
   .links {
@@ -450,7 +493,6 @@ footer {
   }
 
   .company a:hover {
-    font-size: 1.3rem;
     border-color: black;
   }
 
