--- a/styles.css
+++ b/styles.css
@@ -327,22 +327,26 @@ hr {
 
 .speaker-name {
   margin-block: 0;
+  margin-right: auto;
 }
 
 .speaker-designation {
   margin-block: 0;
   font-size: 0.95rem;
   color: #ec5242;
+  text-align: left;
 }
 
 #dots {
   margin: 0;
+  text-align: left;
 }
 
 .speaker-history {
   font-size: 0.85rem;
   width: 100%;
   margin-top: 5%;
+  text-align: left;
 }
 
 .partners-section {
