--- a/about.css
+++ b/about.css
@@ -183,6 +183,66 @@ p {
   font-size: 1.1rem;
 }
 
+.events {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 20px;
+  width: 100%;
+  flex-wrap: wrap;
+  padding-bottom: 40px;
+}
+
+
+.events .event:nth-child(1) {
+  background-image: url(./images/airshow1.jpeg);
+}
+
+.events .event:nth-child(2) {
+  background-image: url(./images/airshow2.jpeg);
+  background-color: #ec5242;
+}
+
+.events
+.event {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  background-position: center;
+  background-color: #ec5242;
+  background-blend-mode: multiply;
+  flex-flow: column;
+  flex-basis: 210px; 
+  flex-grow: 1; 
+  text-align: center;
+  color: #fafafa;
+  padding: 80px 0;
+  gap: 20px;
+  max-height: 100px;
+  background-size: cover;
+}
+
+.paragraph2 {
+  justify-content: center;
+  font-size: 1rem;
+  text-align: center;
+  color: #fff;
+  font-weight: normal;
+  font-family: 'cocogoose', 'lato', sans-serif;
+  text-shadow: 0 0 2px #000;
+  width: 100%;
+  margin: 0;
+}
+
+.events
+.event
+h2 {
+  justify-content: center;
+  display: flex;
+  width:100%;
+  margin: 0;
+  font-size: 1.9rem;
+}
+
 .event-details {
   text-align: center;
   width: 75%;
