Edit background image

--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ p {
 }
 
 .section-one {
-  background-image: url(images/513019.jpg);
+  background-image: url(images/w5.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
